--- a/Wrapsy/app/src/main/res/layout/activity_more_optionspurchase_history.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_optionspurchase_history.xml
@@ -11,10 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <RelativeLayout
                 android:id="@+id/top_bar"
                 android:layout_width="match_parent"
@@ -40,86 +42,32 @@
                     android:layout_centerVertical="true"
                     android:layout_margin="5dp"
                     android:background="@drawable/circleyellow"
-                    android:contentDescription="Menu"
                     android:padding="8dp"
                     android:src="@drawable/ic_notificaciones" />
-
-
             </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:text="Purchase History"
+                android:textColor="#333333"
+                android:textSize="27sp"
+                android:textStyle="bold" />
+
             <LinearLayout
-                android:id="@+id/tv_title"
+                android:id="@+id/giftCardContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:layout_centerHorizontal="true"
-                android:paddingHorizontal="20dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="50dp"
-                    android:text="Purcharse History"
-                    android:textColor="#333333"
-                    android:textSize="27sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-
-
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_marginTop="60dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp">
-
-        <Button
-            android:id="@+id/btn_purchase_history"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_bg"
-            android:text="Gift for Walter White - 23/03/25
-                              Card ending in - 9843"
-            android:textColor="#000000"
-            android:gravity="center_vertical"
-            android:padding="16dp" />
-
-        <Button
-            android:id="@+id/btn_payment_options"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_bg"
-            android:text="Gift Purchase: Puma Cap - 10/03/25
-                                Card ending in - 9843"
-            android:textColor="#000000"
-            android:gravity="center_vertical|start"
-            android:padding="16dp"
-            android:layout_marginTop="16dp" />
-
-        <Button
-            android:id="@+id/btn_about_us"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_bg"
-            android:text="GIFT CARD $100 purchase - 01/03/25
-                          Card ending in - 9843"
-            android:textColor="#000000"
-            android:gravity="center_vertical|start"
-            android:padding="16dp"
-            android:layout_marginTop="16dp" />
-
-    </LinearLayout>
-
-    </LinearLayout>
+                android:orientation="vertical"
+                android:padding="20dp"
+                android:layout_marginTop="20dp" />
+        </LinearLayout>
     </ScrollView>
 
     <include
         layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
-
